--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=serviceadmin
-spring.cloud.config.uri=http://${hostserver:localhost}:8888
+#spring.cloud.config.uri=http://${hostserver:localhost}:8888
 
