--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
-import java.util.regex.Matcher
-
 plugins {
-    id 'org.springframework.boot' version '2.1.4.RELEASE'
+    id 'org.springframework.boot' version '2.2.5.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'net.researchgate.release' version '2.6.0'
     id 'java'
 }
@@ -9,7 +8,13 @@ plugins {
 apply plugin: 'io.spring.dependency-management'
 
 group = 'ru.nyrk'
-sourceCompatibility = '1.8'
+sourceCompatibility = '13'
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
 
 repositories {
     mavenCentral()
@@ -24,17 +29,24 @@ springBoot {
 }
 
 ext {
-    set('springBootAdminVersion', '2.1.3')
-    set('springCloudVersion', 'Greenwich.SR1')
+    set('springBootAdminVersion', "2.2.1")
+    set('springCloudVersion', "Hoxton.SR3")
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'de.codecentric:spring-boot-admin-starter-server'
+    implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-    implementation('org.springframework.cloud:spring-cloud-starter-config')
-    implementation('org.springframework.boot:spring-boot-starter-actuator')
+    compileOnly 'org.projectlombok:lombok'
 
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+    annotationProcessor 'org.projectlombok:lombok'
+
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+    }
+    testImplementation 'io.projectreactor:reactor-test'
 }
 
 dependencyManagement {
@@ -101,3 +113,8 @@ publishing {
 }
 
 afterReleaseBuild.dependsOn publish
+
+
+test {
+    useJUnitPlatform()
+}
