--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,13 @@ plugins {
     id 'org.springframework.boot' version '2.2.5.RELEASE'
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'net.researchgate.release' version '2.6.0'
+    id "com.gorylenko.gradle-git-properties" version "2.0.0"
     id 'java'
 }
 
 apply plugin: 'io.spring.dependency-management'
+apply plugin: "com.gorylenko.gradle-git-properties"
+
 
 group = 'ru.nyrk'
 sourceCompatibility = '13'
