--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,21 +36,11 @@ test:
 
 #////////////////////////////////////////////////////////////////////////////////////
 #Собираем артефакты для формирования образов
-deploy_dev:
+deploy_docker:
   stage: deploy
   image: reg.agria.pro:4567/docker/jdk13
   script:
-    - ./gradlew assemble publish
-  cache:
-    untracked: true
-    policy: pull
-  artifacts:
-    name: "jar_${CI_PROJECT_NAME}_${CI_JOB_NAME}_${CI_COMMIT_REF_NAME}"
-    paths:
-      - ./build/libs
-    expire_in: 100 minute
-  except:
-    - /^prod/.*/
+    - ./gradlew classes jib -Djib.baseImageCache=/cache/jib/ -Djib.console=plain
 
 #Можем получить багу, тесты для одного а прогнали релиз для другого,
 #так как в скрипте делаем pull, получается данны в ветке могут изменится
