--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=serviceadmin
 #spring.cloud.config.uri=http://${hostserver:localhost}:8888
+spring.cloud.kubernetes.enabled=false
+spring.cloud.kubernetes.discovery.enabled=false
