--- a/build.gradle
+++ b/build.gradle
@@ -97,6 +97,7 @@ release {
 }
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+print  "username: "+findProperty("username")
 apply plugin: 'maven-publish'
 publishing {
     publications {
