--- a/build.gradle
+++ b/build.gradle
@@ -97,6 +97,8 @@ release {
 }
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+echo "user=" + findProperty("username")
+echo "ppp=\"" + findProperty("password")+"\""
 apply plugin: 'maven-publish'
 publishing {
     publications {
@@ -147,12 +149,12 @@ jib {
         args = ["run"]
         environment = [
                 'JAVA_MAIN_CLASS': 'ru.nyrk.admin.AdminApplication',
-                'JAVA_OPTIONS': ["-XX:+UnlockExperimentalVMOptions",
-                                 "-XX:+UseZGC",
-                                 "-Xmx256m",
-                                 "-Xlog:gc",
-                                 "-Djava.security.egd=file:/dev/./urandom",
-                                 "-XX:+UnlockDiagnosticVMOptions"]
+                'JAVA_OPTIONS'   : ["-XX:+UnlockExperimentalVMOptions",
+                                    "-XX:+UseZGC",
+                                    "-Xmx256m",
+                                    "-Xlog:gc",
+                                    "-Djava.security.egd=file:/dev/./urandom",
+                                    "-XX:+UnlockDiagnosticVMOptions"]
                         .join(' ')
         ]
         workingDirectory = "/app"
@@ -161,10 +163,10 @@ jib {
         user = "1001"
     }
     extraDirectories {
-        paths = [ "${rootProject.projectDir}/jib" ]
+        paths = ["${rootProject.projectDir}/jib"]
         permissions = [
                 '/app/run-java.sh': '755',
-                '/app/run-env.sh': '755',
+                '/app/run-env.sh' : '755',
         ]
     }
 }
