--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'org.springframework.boot' version '2.2.5.RELEASE'
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
-    id 'net.researchgate.release' version '2.6.0'
+    id 'net.researchgate.release' version '2.8.1'
     id "com.gorylenko.gradle-git-properties" version "2.0.0"
     id 'com.google.cloud.tools.jib' version '2.2.0'
     id 'java'
@@ -44,10 +44,6 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'org.springframework.cloud:spring-cloud-starter-kubernetes-all'
-    compileOnly 'org.projectlombok:lombok'
-
-    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-    annotationProcessor 'org.projectlombok:lombok'
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
@@ -63,7 +59,7 @@ dependencyManagement {
 }
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-
+apply plugin: "net.researchgate.release"
 task releaseBuild {
     dependsOn(":assemble")
 }
