--- a/build.gradle
+++ b/build.gradle
@@ -102,8 +102,8 @@ publishing {
     repositories {
         maven {
             credentials {
-                username = findProperty("username")
-                password = findProperty("password")
+                username = System.getenv('ORG_GRADLE_PROJECT_username')
+                password = System.getenv('ORG_GRADLE_PROJECT_password')
             }
             def dir = 'https://dev.agria.pro/nexus/repository'
             def releasesRepoUrl = "${dir}/maven-releases"
